// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid with custom number of columns should have the correct css styles 1`] = `
.c0 {
  display: grid;
  grid-template-columns: repeat(10,[col-start] 1fr);
  grid-gap: 1rem;
}

<div
  className="c0"
/>
`;

exports[`Grid with custom number of columns should render 1`] = `
<styled.div
  columns={10}
  gutter="1rem"
/>
`;

exports[`Grid with custom number of columns should render with a child components 1`] = `
<styled.div
  columns={10}
  gutter="1rem"
>
  <Component />
</styled.div>
`;

exports[`Grid with default values should have the correct css styles 1`] = `
.c0 {
  display: grid;
  grid-template-columns: repeat(12,[col-start] 1fr);
  grid-gap: 1rem;
}

<div
  className="c0"
/>
`;

exports[`Grid with default values should render 1`] = `
<styled.div
  columns="12"
  gutter="1rem"
/>
`;

exports[`Grid with default values should render with a child components 1`] = `
<styled.div
  columns="12"
  gutter="1rem"
>
  <Component />
</styled.div>
`;

exports[`Grid with no gutter should have the correct css styles 1`] = `
.c0 {
  display: grid;
  grid-template-columns: repeat(12,[col-start] 1fr);
  grid-gap: 0;
}

<div
  className="c0"
/>
`;

exports[`Grid with no gutter should render 1`] = `
<styled.div
  columns="12"
  gutter="0"
/>
`;

exports[`Grid with no gutter should render with a child components 1`] = `
<styled.div
  columns="12"
  gutter="0"
>
  <Component />
</styled.div>
`;
